Dockerized the application