@@ -1,22 +1,25 @@
 package br.com.als.mymoney.api.domain.model.dto.validation;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
 
-public class AnyValueOfEnumValidator implements ConstraintValidator<AnyValueOfEnum, CharSequence> {
+public class AnyValueOfEnumValidator implements ConstraintValidator<AnyValueOfEnum, String> {
 	List<String> acceptedValues;
 
 	@Override
 	public void initialize(AnyValueOfEnum annotation) {
 		ConstraintValidator.super.initialize(annotation);
-		acceptedValues = Stream.of(annotation.enumClass().getEnumConstants()).map(Enum::name).toList();
+		acceptedValues = Arrays.asList(annotation.enumClass().getEnumConstants()).stream().map(Enum::name)
+				.collect(Collectors.toList());
+
 	}
 
 	@Override
-	public boolean isValid(CharSequence value, ConstraintValidatorContext context) {
+	public boolean isValid(String value, ConstraintValidatorContext context) {
 
 		if (value == null)
 			return false;
